DockerVersion/src/main/java/com/example/dockerversion/error/CourierReadException.java
package com.example.dockerversion.error;

public class CourierReadException extends RuntimeException{
    public CourierReadException() {
        super("Courier didn't read!");
    }
}
